Navigation bar added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <title>G3 Architects</title>
 </head>
 <body>
-    
+    <section class="header-section">
+        <nav class="container">
+            <h2>G3 Architects</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Log in</a></li>
+            </ul>
+        </nav>
+    </section>
 </body>
 </html>
