Header section added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header-section">
         <nav class="container">
-            <h2>G3 Architects</h2>
+            <h2 class="primary-title">G3 Architects</h2>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -21,6 +21,17 @@
                 <li><a href="#">Log in</a></li>
             </ul>
         </nav>
+
+        <div class="heading">
+            <h1>Brand New <br> 
+                Group of Architects 
+                </h1>
+                <p class="primary-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-btn">Explore More</button>
+        </div>
+        <div class="banner container">
+            <img src="./images/banner.png" alt="">
+        </div>
     </section>
 </body>
 </html>
